<resources>
    <string name="app_name">My Application</string>
    <string name="A">"A"</string>
    <string name="As">"A#"</string>
    <string name="B">"B"</string>
    <string name="C">"C"</string>
    <string name="D">"D"</string>
    <string name="E">"E"</string>
    <string name="a">"A"</string>
    <string name="F">"F"</string>
    <string name="G">"G"</string>
    <string name="sharpQ">"Sharp?"</string>
    <string name="Acci">"Accidentals"</string>
    <string name="MAJ">"Major"</string>
    <string name="MIN">"Minor"</string>
    <string name="DIM">"Diminished"</string>
    <string name="AUG">"Augmented"</string>
    <string name="INT">"Interval"</string>
    <string name="next">"Next Chord"</string>
    <string name="view">"View Chords"</string>
    <string name="add">"Add"</string>
    <string name="addd">"Add"</string>
</resources>
