<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/radioGroup"
        android:clickable="true">
        <RadioButton android:id="@+id/A"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/A"
            android:clickable="true" />

        <RadioButton android:id="@+id/B"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/B"
            android:clickable="true" />
        <RadioButton android:id="@+id/C"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/C"
            android:clickable="true" />
        <RadioButton android:id="@+id/D"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/D"
            android:clickable="true" />
        <RadioButton android:id="@+id/E"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/E"
            android:clickable="true" />
        <RadioButton android:id="@+id/F"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/F"
            android:clickable="true"
            android:contextClickable="true"
            android:enabled="true"
            android:longClickable="true" />
        <RadioButton android:id="@+id/G"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/G"
            android:clickable="true"
            android:longClickable="true"
            android:nestedScrollingEnabled="true" />

    </RadioGroup>


    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sharpQ"
        android:id="@+id/switch1"
        android:checked="false"
        android:layout_gravity="center_horizontal"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        tools:ignore="RelativeOverlap" />

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/radioGroups"
        android:layout_below="@+id/switch1"
        android:layout_alignStart="@+id/editText2"
        android:clickable="true">
    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MAJ"
        android:id="@+id/radioButton8"
        android:layout_below="@+id/editText"
        android:layout_alignParentStart="true"
        android:layout_marginTop="39dp"
        android:checked="false"
        android:clickable="true" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MIN"
        android:id="@+id/radioButton9"
        android:layout_alignTop="@+id/radioButton8"
        android:layout_toEndOf="@+id/radioButton8"
        android:checked="false"
        android:clickable="true" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DIM"
        android:id="@+id/radioButton10"
        android:checked="false"
        android:layout_alignTop="@+id/radioButton9"
        android:layout_toEndOf="@+id/editText"
        android:clickable="true" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AUG"
        android:id="@+id/radioButton11"
        android:layout_below="@+id/radioButton8"
        android:layout_alignEnd="@+id/radioButton9"
        android:checked="false"
        android:clickable="true" />
    </RadioGroup>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editText2"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Acci"
            android:id="@+id/textView"
            android:layout_above="@+id/editText"
            android:layout_toEndOf="@+id/editText2" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editText"
            android:inputType="text"
            android:layout_above="@+id/textView2"
            android:layout_alignStart="@+id/textView"
            android:layout_marginBottom="61dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/INT"
            android:id="@+id/textView2"
            android:layout_marginStart="72dp"
            android:layout_above="@+id/editText2" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:id="@+id/button"
            android:layout_alignBottom="@+id/textView2"
            android:layout_toEndOf="@+id/textView" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view"
            android:id="@+id/button2"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:id="@+id/button3"
            android:layout_below="@+id/button"
            android:layout_toStartOf="@+id/button" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addd"
            android:id="@+id/button4"
            android:layout_below="@+id/textView"
            android:layout_toEndOf="@+id/textView" />
    </RelativeLayout>

</RelativeLayout>
